<resources>
    <string name="app_name">WebBrowser</string>

    <string name="go_to">go to</string>
    <string name="distance">distance</string>
    <string name="font_size">font size</string>
    <string name="ok">ok</string>
    <string name="brightness">brightness</string>
    <string name="size_factor">size factor</string>
    <string name="brightness_factor">brightness factor</string>

    <string name="calibrate">Calibrate!</string>
    <string name="reset">Reset</string>
    <string name="currentDistance">Distance</string>
    <string name="showMiddlePoint">Middle eye point</string>
    <string name="showEyePoints">Eye points</string>


    <string name="account">account</string>
    <string name="password">password</string>
    <string name="register_num">register_num</string>
    <string name="register_password">register_password</string>
    <string name="register_validate">register_validate</string>
    <string name="get_validate">get_validate</string>
    <string name="check_password">check_password</string>
    <string name="check_login">check_login</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="welcome">welcome</string>

    <string name="action_settings">Settings</string>
</resources>
