<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_page"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--标题栏-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.MyStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Hi-Browser"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleMargin="@dimen/dp_10"
            app:titleTextColor="@android:color/white"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_move_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_eye_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/tv_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </HorizontalScrollView>


        <LinearLayout
            android:id="@+id/camera_part"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <!--摄像头预览控件-->
                <!-- Height + width will be set in the main activity -->
                <com.fruitbasket.webbrowser.CameraSurfaceView
                    android:id="@+id/surface_camera"
                    android:layout_height="0dip"
                    android:layout_width="0dip"
                    android:layout_centerHorizontal="true">
                </com.fruitbasket.webbrowser.CameraSurfaceView>

                <TextView
                    android:id="@+id/currentDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_40"
                    android:gravity="center_horizontal"
                    android:textColor="#000"
                    android:text="@string/currentDistance"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/surface_camera">
                    <Button
                        android:id="@+id/resetButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_1"
                        android:onClick="pressedReset"
                        android:text="@string/reset" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/showMiddlePoint"
                            android:checked="true"
                            android:onClick="onShowMiddlePoint" />
                        <Switch
                            android:id="@+id/switch2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/showEyePoints"
                            android:checked="false"
                            android:onClick="onShowEyePoints" />
                    </LinearLayout>

                    <!--校准按钮-->
                    <Button
                        android:id="@+id/calibrateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/dp_1"
                        android:onClick="pressedCalibrate"
                        android:text="@string/calibrate"
                        android:background="@drawable/red_button" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrollView_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="#a0000000"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical">
                        <!--显示控件-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/background_brightness"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />

                                <TextView
                                    android:id="@+id/brightness_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"/>
                            </LinearLayout>
                            <!--以上是参数调节控件-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="eye distance(cm)"/>
                                <EditText
                                    android:id="@+id/et_eye_distance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="10"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>


                    <!--网页视图在这-->
                    <WebView
                        android:id="@+id/web_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                    </WebView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_drawer"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#080808"
        android:choiceMode="singleChoice"
        android:divider="#FFFFFF"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>


