<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_login_bg"
    android:orientation="vertical">

        <!--title_register-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left">
                        <ImageView
                            android:id="@+id/back_login"
                            android:layout_width="@dimen/dp_22"
                            android:layout_height="@dimen/dp_22"
                            android:layout_marginTop="@dimen/dp_7"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:src="@drawable/back_login"/>
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="#ffffff"
                            android:text="@string/register"
                            android:layout_gravity="center"
                            android:textSize="@dimen/text_size_most"
                            />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="#e6e6e6"/>

        <!--注册logo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:id="@+id/register_logo"
            android:orientation="vertical" >

                <ImageView
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/register1" />
        </LinearLayout>

        <!--账号密码输入框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_drawable_bg"
            android:orientation="vertical"
            android:padding="15dip"
            android:layout_marginTop="45dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip">

                <!--账号输入框-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height_normal"
                    android:layout_marginLeft="@dimen/line_litter_height"
                    android:layout_marginRight="@dimen/line_litter_height">

                        <ImageView
                            android:id="@+id/img_account"
                            android:layout_width="@dimen/dp_19"
                            android:layout_height="@dimen/dp_20"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="@dimen/margin_tiny"
                            android:layout_marginLeft="@dimen/margin_tiny"
                            android:scaleType="fitXY"
                            android:src="@drawable/icon_login_account"/>

                        <EditText
                            android:id="@+id/et_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin_tiny"
                            android:layout_marginLeft="@dimen/margin_normal"
                            android:layout_toRightOf="@+id/img_account"
                            android:background="@null"
                            android:hint="@string/account"
                            android:maxLines="1"
                            android:textColor="#515151"
                            android:textColorHint="#cdcdcd"
                            android:textSize="@dimen/text_size_normal"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:background="#eeeeee"/>

                <!--密码输入框-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height_normal"
                    android:layout_marginLeft="@dimen/line_litter_height"
                    android:layout_marginRight="@dimen/line_litter_height">

                        <ImageView
                            android:id="@+id/img_pw"
                            android:layout_width="@dimen/dp_18"
                            android:layout_height="@dimen/dp_20"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="@dimen/margin_tiny"
                            android:layout_marginLeft="@dimen/margin_tiny"
                            android:scaleType="fitXY"
                            android:src="@drawable/icon_login_pw"/>

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin_tiny"
                            android:layout_marginLeft="@dimen/margin_normal"
                            android:layout_toRightOf="@+id/img_pw"
                            android:background="@null"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="#515151"
                            android:textColorHint="#cdcdcd"
                            android:textSize="@dimen/text_size_normal"/>
                        <ImageView
                            android:id="@+id/iv_see_password"
                            android:layout_width="@dimen/image_height_litter"
                            android:layout_height="@dimen/image_height_litter"
                            android:src="@drawable/image_password_bg"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:scaleType="fitXY"
                            />
                </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/register"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"/>
</LinearLayout>